# javaplex

./: .classpath  .gitignore  .project  LICENSE.md  README.md  _config.yml  build.number  build.xml  index.html  index.md  jar_build.xml  params.json
data/natural_images/: n50000Dct.mat  nk15c30Dct.mat  nk300c30Dct.mat  readme_natural_images.txt
data/point_clouds/: circle.txt  sphere.txt
data/range_images/: pointsRange.mat  r3_50000.mat
doc/: State.html  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-frame.html  package-list  package-summary.html  package-tree.html  serialized-form.html
doc/bsh/: JPlex.html  JTerm.html  PlexInterpreter.html  PlexReader.html  package-frame.html  package-summary.html  package-tree.html
doc_includes/: overview.htm  overview_plex3.htm  update_mime_types.sh
java/bsh/: JTerm.java  PlexInterpreter.java
reports/: biblio.bib  extended_abstract.aux  extended_abstract.bbl  extended_abstract.blg  extended_abstract.tex
reports/PlexMatlabTutorial/: 1.idx  1.ilg  1.ind  PlexMatlabTutorial.tex  PlexMatlabTutorial.toc
reports/PlexMatlabTutorialFiles/: betti2vect.m  commandListMatlab.rtf  dct.m  eulerCharacteristic.m  exerciseAnswersMatlab.rtf  interval2mat.m  maxminLandmarks.m  pointsFigure8.m  pointsTorus.m  startJPlex.m
reports/javaplex_tutorial/: 1.idx  cleanup.sh  javaplex_tutorial.aux  javaplex_tutorial.bbl  javaplex_tutorial.bib  javaplex_tutorial.blg  javaplex_tutorial.out  (+4 more)
src/cpp/PLEX3/: DESCRIPTION  config.status  configure  configure.ac
src/cpp/PLEX3/R/: .plex.R.swp  plex.R  zzz.R
src/cpp/PLEX3/autom4te.cache/: output.0  requests  traces.0
src/cpp/PLEX3/man/: rips.stream.Rd
src/cpp/PLEX3/src/: rbind_jni.cpp
(+2968 files in other folders)
